Correction mobile menu

--- a/scss/layouts/_mobile-menu.scss
+++ b/scss/layouts/_mobile-menu.scss
@@ -7,6 +7,7 @@
   height: 100%;
   background-color: var(--color-primary-light);
   transform: translate(100%);
+  z-index: 2;
   transition-duration: 0.5s;
 
   &.is-open {
